IMPALA-4613: Make sure timers are finished before sending report profile

FragmentComplete() sends the last report profile. If a timer is still
running while the profile is sent, it may not be included in the final
report. This patch ensures that the timers are all out of scope before
FragmentComplete() gets called.

Change-Id: If841e8b0a1effdab4349f081535b785c8bf2af7a
Reviewed-on: http://gerrit.cloudera.org:8080/5394
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Henry Robinson <henry@cloudera.com>